--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,11 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^5.20.0",
     "@prisma/extension-accelerate": "^1.2.1",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.3",
     "prisma": "^5.20.0",
     "zod": "^3.23.8"
