--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@prisma/client": "^5.20.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "hono": "^4.6.3",
     "prisma": "^5.20.0",
