--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^6.26.2",
-    "react-webcam": "^7.2.0"
+    "react-webcam": "^7.2.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
