--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-speech-to-text": "^0.8.0",
     "react-media-recorder": "^1.7.1",
     "react-router-dom": "^6.26.2",
     "react-webcam": "^7.2.0",
