--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "clien",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,8 +15,7 @@
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
     "react-media-recorder": "^1.7.1",
-    "react-router-dom": "^6.26.2",
-    "react-webcam": "^7.2.0",
+    "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
